Extract methods and clean up

--- a/motion_tracker/conf.yaml
+++ b/motion_tracker/conf.yaml
@@ -4,11 +4,7 @@ camera:
   camera_warmup_time: 2.5
   delta_thresh: 5
   minimum_time_delta: 10
-  resolution:
-  - 640
-  - 480
-  fps: 16
   min_area: 500
 
 server:
-  url: http://localhost:8899/api/post
+  url: http://0.0.0.0:8899/api/post
